change padding and content for welcome section

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -5,9 +5,8 @@
 {% block content %}
 <div class="container-fluid background-image">
     <div class="row">
-
         <div class="col-12 left">
-            <div class="row mt-5 mb-5 text-white">
+            <div class="row mt-5 mb-5 pb-5 text-white">
                 <h2 class="welcome-text text-decoration-underline mt-4 mb-5">Welcome to my <br>Catch a Dog<i
                         class="fa-solid fa-dog" style="color: #2f15f4;"></i>
                     website!</h2><br>
@@ -15,10 +14,9 @@
                     rehabilitation for animals. You can
                     read and
                     comment on others' reviews. On my website you can find all the necessary information but
-                    if you stil have any questions, please contact me.If your dog or cat was my client and you want
+                    if you stil have any questions, please contact me via the contact form. If your dog or cat was my client and you want
                     to share your opinion with others, please you are welcome to do so
                     after logging in!<br>You can see all reviews below.</h4>
-
             </div>
         </div>
         <div class="col-12 mt-5">
