edit introduction session, deploy before submission

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -16,8 +16,11 @@
                     comment on others' reviews. On my website you can find all the necessary information but
                     if you stil have any questions, please contact me via the contact form. If your dog or cat was my client and you want
                     to share your opinion with others, please you are welcome to do so
-                    after logging in!<br>You can see all reviews below.</h4>
+                    after logging in!<br><span class="text-decoration-underline">You can see all reviews below.</span>
+                </h4>
+                
             </div>
+            
         </div>
         <div class="col-12 mt-5">
             <!-- Reviews Column -->
